--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/2.c7dad699.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.abd1ca75.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.fdd5b1ee.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.920af668.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.01234da4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.81c4b7a6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3770930b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.26042bf4.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.db3514d9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.73f5d614.js">
@@ -19,7 +19,7 @@
 			
 			<script>
 				{
-					__sveltekit_onxhen = {
+					__sveltekit_19z3la1 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.abd1ca75.js"),
-						import("./_app/immutable/entry/app.01234da4.js")
+						import("./_app/immutable/entry/start.fdd5b1ee.js"),
+						import("./_app/immutable/entry/app.3770930b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
