--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/2.5ce473d3.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a000d379.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e28b26f8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.83969f85.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.4df7053b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3d6aa59e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.10fdff6e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.07687393.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb01a643.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.78320578.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.957eda18.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <div class="wrapper svelte-yege5e"><div class="content svelte-yege5e"><header class="header svelte-yege5e"><div data-svelte-h="svelte-66g3hz"><h1 class="svelte-yege5e">OpenAI Chat completions API Visualizer</h1> <p class="svelte-yege5e">Visualize Chat completions API&#39;s messages and response.</p></div> <div class="gh-wrapper svelte-yege5e"><a href="https://github.com/baseballyama/openai-chat-visualizer" target="_blank" rel="noopener noreferrer"><svg version="1.1" width="16" height="16" viewBox="0 0 16 16" class="octicon octicon-mark-github svelte-92nypd svelte-1bvf986" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z" class="svelte-92nypd" style="fill: rgb(44, 62, 80);"></path></svg> </a></div></header> <section class="editors svelte-yege5e"><div class="editor-wrapper svelte-yege5e"><div class="svelte-yege5e"><div><h2 class="svelte-yege5e" data-svelte-h="svelte-ctbj3q">Messages</h2> <div class="codemirror svelte-96yski"></div></div> <div><h2 class="svelte-yege5e" data-svelte-h="svelte-1496yt9">Response</h2> <div class="codemirror svelte-96yski"></div></div></div></div> <div class="arrow arrow-pc svelte-yege5e" data-svelte-h="svelte-1i00401">→</div> <div class="arrow arrow-sp svelte-yege5e" data-svelte-h="svelte-1nbprhq">↓</div> <div class="editor-wrapper svelte-yege5e"><div class="chat-wrapper svelte-1qwntin"><div class="message-wrapper svelte-1qwntin"> <div class="message system svelte-1qwntin"><div><pre class="message-content svelte-1qwntin">system: You are call center assistant.</pre> </div></div>  </div><div class="message-wrapper svelte-1qwntin"> <div class="message user svelte-1qwntin"><div><pre class="message-content svelte-1qwntin">Hi!</pre> </div></div> <img src="user.png" alt="openai" width="16" height="16"> </div><div class="message-wrapper svelte-1qwntin"><img src="openai.png" alt="openai" width="16" height="16"> <div class="message assistant svelte-1qwntin"><div><pre class="message-content svelte-1qwntin">Thank you for calling. May I help you?</pre> </div></div>  </div><div class="message-wrapper svelte-1qwntin"> <div class="message user svelte-1qwntin"><div><pre class="message-content svelte-1qwntin">Please tell me how to fix xxx?</pre> </div></div> <img src="user.png" alt="openai" width="16" height="16"> </div><div class="message-wrapper svelte-1qwntin"><img src="openai.png" alt="openai" width="16" height="16"> <div class="message assistant svelte-1qwntin"><div><pre class="message-content svelte-1qwntin">You can do xxx!</pre> </div></div>  </div> </div></div></section></div> <footer class="footer svelte-yege5e" data-svelte-h="svelte-1osqm1h"><a href="https://github.com/baseballyama" target="_blank" rel="noopener noreferrer">Created by baseballyama</a></footer> </div> 
 			
 			<script>
 				{
-					__sveltekit_1htbvh1 = {
+					__sveltekit_18xmvbv = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a000d379.js"),
-						import("./_app/immutable/entry/app.4df7053b.js")
+						import("./_app/immutable/entry/start.e28b26f8.js"),
+						import("./_app/immutable/entry/app.10fdff6e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
