--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6eafcc4a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.cd82386a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.91c2d46b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.40d4ffb5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a3d26c6e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.71d8249f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.07687393.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb01a643.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.a9ed869f.js">
@@ -19,7 +19,7 @@
 			
 			<script>
 				{
-					__sveltekit_oqlrgz = {
+					__sveltekit_1yfkose = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6eafcc4a.js"),
-						import("./_app/immutable/entry/app.40d4ffb5.js")
+						import("./_app/immutable/entry/start.cd82386a.js"),
+						import("./_app/immutable/entry/app.71d8249f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
