--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.cd82386a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0a2531f3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a3d26c6e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.71d8249f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1be5c494.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.f0394741.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.07687393.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb01a643.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.a9ed869f.js">
@@ -19,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1yfkose = {
+					__sveltekit_oj3x12 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -29,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.cd82386a.js"),
-						import("./_app/immutable/entry/app.71d8249f.js")
+						import("./_app/immutable/entry/start.0a2531f3.js"),
+						import("./_app/immutable/entry/app.f0394741.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
