--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.776344ca.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.aa65e32e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b7f23637.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.7b2a7c38.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.6f829d34.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.2eee24fc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.07687393.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb01a643.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.a9ed869f.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_vifehr = {
+					__sveltekit_1wm5jln = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.776344ca.js"),
-						import("./_app/immutable/entry/app.7b2a7c38.js")
+						import("./_app/immutable/entry/start.aa65e32e.js"),
+						import("./_app/immutable/entry/app.2eee24fc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
