deploy: eecc24c285ae2b821938c090c2bd2ff0f795e7e2

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6dc317ca.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.db505039.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.aeb6e4f7.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.a58a6cb2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f68ecfe3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ec132aeb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.07687393.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb01a643.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.dcf164dd.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_bxjnps = {
+					__sveltekit_qvcbbm = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6dc317ca.js"),
-						import("./_app/immutable/entry/app.a58a6cb2.js")
+						import("./_app/immutable/entry/start.db505039.js"),
+						import("./_app/immutable/entry/app.ec132aeb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
