--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a58c021f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.79d89642.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9405cbbf.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0389f39c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a7acd218.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.f2b115ca.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.07687393.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb01a643.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.dcf164dd.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_e42kvy = {
+					__sveltekit_3cphcs = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a58c021f.js"),
-						import("./_app/immutable/entry/app.0389f39c.js")
+						import("./_app/immutable/entry/start.79d89642.js"),
+						import("./_app/immutable/entry/app.f2b115ca.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
