--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c431d0c3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.19cddf98.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c69999d9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.95643e1f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.14b91d52.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.6abd14d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.07687393.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb01a643.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.dcf164dd.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_l40asy = {
+					__sveltekit_w7r4fv = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c431d0c3.js"),
-						import("./_app/immutable/entry/app.95643e1f.js")
+						import("./_app/immutable/entry/start.19cddf98.js"),
+						import("./_app/immutable/entry/app.6abd14d5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
