deploy: cfebb0f5b40b6e0af3047ea79638fb249cabb782

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.151e5a83.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ac822f0e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f9893ba4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.c645b384.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.4758b613.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.cf2e14e0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.07687393.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb01a643.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.5c7d640c.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1pri9vc = {
+					__sveltekit_114lyfy = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.151e5a83.js"),
-						import("./_app/immutable/entry/app.c645b384.js")
+						import("./_app/immutable/entry/start.ac822f0e.js"),
+						import("./_app/immutable/entry/app.cf2e14e0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
