deploy: 93448e8e4d2aaa2ba5add2c7613ea421078dfc76

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ac822f0e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0586ad51.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.4758b613.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cf2e14e0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.52c04e17.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.41f927c6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.07687393.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.cb01a643.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.5c7d640c.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_114lyfy = {
+					__sveltekit_qil78f = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ac822f0e.js"),
-						import("./_app/immutable/entry/app.cf2e14e0.js")
+						import("./_app/immutable/entry/start.0586ad51.js"),
+						import("./_app/immutable/entry/app.41f927c6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
