deploy: f32099518199396c6a149d13ce8cdd674cbc1681

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a9dd45dc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.77d0fcc7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.6832bcd5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.b46f379f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.8bfdf7a8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.91b77ccf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.cb381e39.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_sp76e1 = {
+					__sveltekit_1mfsk4f = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a9dd45dc.js"),
-						import("./_app/immutable/entry/app.b46f379f.js")
+						import("./_app/immutable/entry/start.77d0fcc7.js"),
+						import("./_app/immutable/entry/app.91b77ccf.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
