--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.aef87b79.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.a179f8a0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.fd02249d.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.df2d78c5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.27cb2fa8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.846cbb23.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.893d5eb9.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.67c47c7f.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <div class="wrapper svelte-552jth"><div class="content svelte-552jth"><header class="header svelte-552jth"><div data-svelte-h="svelte-66g3hz"><h1 class="svelte-552jth">OpenAI Chat completions API Visualizer</h1> <p class="svelte-552jth">Visualize Chat completions API&#39;s messages and response.</p></div> <div class="gh-wrapper svelte-552jth"><a href="https://github.com/baseballyama/openai-chat-visualizer" target="_blank" rel="noopener noreferrer"><svg version="1.1" width="16" height="16" viewBox="0 0 16 16" class="octicon octicon-mark-github svelte-92nypd svelte-1bvf986" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z" class="svelte-92nypd" style="fill: rgb(44, 62, 80);"></path></svg> </a></div></header> <section class="editors svelte-552jth"><div class="editor-wrapper svelte-552jth"><div class="svelte-552jth"><div><h2 class="svelte-552jth" data-svelte-h="svelte-ctbj3q">Messages</h2> <div class="editor svelte-552jth"><div class="codemirror svelte-96yski"></div></div></div> <div><h2 class="svelte-552jth" data-svelte-h="svelte-1496yt9">Response</h2> <div class="editor svelte-552jth"><div class="codemirror svelte-96yski"></div></div></div></div></div> <div class="arrow arrow-pc svelte-552jth" data-svelte-h="svelte-1i00401">→</div> <div class="arrow arrow-sp svelte-552jth" data-svelte-h="svelte-1nbprhq">↓</div> <div class="editor-wrapper chat-wrapper svelte-552jth"><div class="chat-wrapper svelte-1p3r8cg"><div class="message-wrapper svelte-1p3r8cg"> <div class="message system svelte-1p3r8cg"><div><pre class="message-content svelte-1p3r8cg">system: You are call center assistant.</pre> </div></div>  </div><div class="message-wrapper svelte-1p3r8cg"> <div class="message user svelte-1p3r8cg"><div><pre class="message-content svelte-1p3r8cg">Hi!</pre> </div></div> <img src="user.png" alt="openai" width="16" height="16"> </div><div class="message-wrapper svelte-1p3r8cg"><img src="openai.png" alt="openai" width="16" height="16"> <div class="message assistant svelte-1p3r8cg"><div><pre class="message-content svelte-1p3r8cg">Thank you for calling. May I help you?</pre> </div></div>  </div><div class="message-wrapper svelte-1p3r8cg"> <div class="message user svelte-1p3r8cg"><div><pre class="message-content svelte-1p3r8cg">Please tell me how to fix xxx?</pre> </div></div> <img src="user.png" alt="openai" width="16" height="16"> </div><div class="message-wrapper svelte-1p3r8cg"><img src="openai.png" alt="openai" width="16" height="16"> <div class="message assistant svelte-1p3r8cg"><div><pre class="message-content svelte-1p3r8cg">You can do xxx!</pre> </div></div>  </div> </div></div></section></div> <footer class="footer svelte-552jth" data-svelte-h="svelte-1osqm1h"><a href="https://github.com/baseballyama" target="_blank" rel="noopener noreferrer">Created by baseballyama</a></footer> </div> 
 			
 			<script>
 				{
-					__sveltekit_r6w4ii = {
+					__sveltekit_iswiux = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.aef87b79.js"),
-						import("./_app/immutable/entry/app.df2d78c5.js")
+						import("./_app/immutable/entry/start.a179f8a0.js"),
+						import("./_app/immutable/entry/app.846cbb23.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
