--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.eefbfbe0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4940dae1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.eb933d1f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.29eb6698.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f9d09199.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.68c2abc0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.67c47c7f.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_16dk62m = {
+					__sveltekit_v2a3ee = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.eefbfbe0.js"),
-						import("./_app/immutable/entry/app.29eb6698.js")
+						import("./_app/immutable/entry/start.4940dae1.js"),
+						import("./_app/immutable/entry/app.68c2abc0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
