--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.280858ac.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1cdba081.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.63fa02c6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5ecaec83.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0a0cc4b7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.22015ce5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.15467e4b.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1k5ojbu = {
+					__sveltekit_k1yk47 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.280858ac.js"),
-						import("./_app/immutable/entry/app.5ecaec83.js")
+						import("./_app/immutable/entry/start.1cdba081.js"),
+						import("./_app/immutable/entry/app.22015ce5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
