--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.1d105e9e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4f3645a6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7bc1de16.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.730372d5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e1ac924d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.91eaf185.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.0e31705b.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_17lgihg = {
+					__sveltekit_yyi2zj = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.1d105e9e.js"),
-						import("./_app/immutable/entry/app.730372d5.js")
+						import("./_app/immutable/entry/start.4f3645a6.js"),
+						import("./_app/immutable/entry/app.91eaf185.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
