--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bdb92bfd.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ab4d3934.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.204ad6cd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.1562c95f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0c32e82b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ef111639.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.0e31705b.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_3l6s34 = {
+					__sveltekit_mnj828 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bdb92bfd.js"),
-						import("./_app/immutable/entry/app.1562c95f.js")
+						import("./_app/immutable/entry/start.ab4d3934.js"),
+						import("./_app/immutable/entry/app.ef111639.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
