--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.947b617b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.fb38617a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a2f29d07.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ab706a43.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3373d386.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5ef176db.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.6669e69d.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_uurr1y = {
+					__sveltekit_wc4hnb = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.947b617b.js"),
-						import("./_app/immutable/entry/app.ab706a43.js")
+						import("./_app/immutable/entry/start.fb38617a.js"),
+						import("./_app/immutable/entry/app.5ef176db.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
