deploy: de62c36ed0276718835c0b9a26d770981708e3d3

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a797e45c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.dcd519a3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ebccda56.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.5f26cc62.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.151f21e8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.714b3b37.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.6669e69d.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1x8tbav = {
+					__sveltekit_1gouu7m = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a797e45c.js"),
-						import("./_app/immutable/entry/app.5f26cc62.js")
+						import("./_app/immutable/entry/start.dcd519a3.js"),
+						import("./_app/immutable/entry/app.714b3b37.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
