--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.da44764d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.a4419f9c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0146cfc8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.3ec2c5c4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9f31391c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.c6ffe97f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.4d79f697.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_x3isk8 = {
+					__sveltekit_1w4guif = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.da44764d.js"),
-						import("./_app/immutable/entry/app.3ec2c5c4.js")
+						import("./_app/immutable/entry/start.a4419f9c.js"),
+						import("./_app/immutable/entry/app.c6ffe97f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
