deploy: 2e8b7266be1b5201b607092ad6385e5f2a2f7afb

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c01043f3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bdaf2a87.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ec869312.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.a4075741.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5ad727ed.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.eec34501.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.4d79f697.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1bw8lj3 = {
+					__sveltekit_2d637f = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c01043f3.js"),
-						import("./_app/immutable/entry/app.a4075741.js")
+						import("./_app/immutable/entry/start.bdaf2a87.js"),
+						import("./_app/immutable/entry/app.eec34501.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
