--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.f74fa514.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.5cc35755.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d5ec9acc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.456bfa5d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c147c6a1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ea23713d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.4d79f697.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_c8p526 = {
+					__sveltekit_10doou5 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.f74fa514.js"),
-						import("./_app/immutable/entry/app.456bfa5d.js")
+						import("./_app/immutable/entry/start.5cc35755.js"),
+						import("./_app/immutable/entry/app.ea23713d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
