--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.08210091.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9214289c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.68bebc53.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cf67ea42.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a6a9bb93.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3a881857.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.4d79f697.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_q6s3lm = {
+					__sveltekit_lao33x = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.08210091.js"),
-						import("./_app/immutable/entry/app.cf67ea42.js")
+						import("./_app/immutable/entry/start.9214289c.js"),
+						import("./_app/immutable/entry/app.3a881857.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
