deploy: 30ebb00936e2aea0ca01d485d685fbcb76b8f4d7

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.2f0b91b2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.97c92529.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.8dd3318f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.327ab29c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.be505c69.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d04c18ef.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.c35d091d.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_mnu2vw = {
+					__sveltekit_1hk9qy = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.2f0b91b2.js"),
-						import("./_app/immutable/entry/app.327ab29c.js")
+						import("./_app/immutable/entry/start.97c92529.js"),
+						import("./_app/immutable/entry/app.d04c18ef.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
