deploy: e500507cb395e00564cc3d17d9899fa36e99b328

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.e3ca5ae1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.7677bcf4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9a6e4dba.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.257a207d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.f3b0540c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.7660043d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.c35d091d.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_6oshp1 = {
+					__sveltekit_1tsvw6o = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.e3ca5ae1.js"),
-						import("./_app/immutable/entry/app.257a207d.js")
+						import("./_app/immutable/entry/start.7677bcf4.js"),
+						import("./_app/immutable/entry/app.7660043d.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
