deploy: f92a5f31117de4441ccc60c967ca5ac4f0e2663b

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4f335487.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.66b387be.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a3e45f9a.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.f7c16f5a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.60b47542.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.1b9ac66e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.06ecb210.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_19110ew = {
+					__sveltekit_1l62qan = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4f335487.js"),
-						import("./_app/immutable/entry/app.f7c16f5a.js")
+						import("./_app/immutable/entry/start.66b387be.js"),
+						import("./_app/immutable/entry/app.1b9ac66e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
