deploy: 52a53780da6017b5ba62d844038798752d5f14c0

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.fa209e00.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.1cdfde91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.86cbafb4.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.48c31806.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5d59e4ea.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.899c0d58.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.06ecb210.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_4lwt01 = {
+					__sveltekit_53xuzg = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.fa209e00.js"),
-						import("./_app/immutable/entry/app.48c31806.js")
+						import("./_app/immutable/entry/start.1cdfde91.js"),
+						import("./_app/immutable/entry/app.899c0d58.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
