deploy: aefccd55e8fc66a40f92ea0e1dc409b0a24156c5

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.4cc80e27.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.dcd5c5e2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.dac3ada3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.8b74b908.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.2fca401e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.bf6a23bb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.40f8fc8a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.5e89999f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.dcafd388.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.35de9cd9.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.b06e5e2f.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1me55gw = {
+					__sveltekit_1ip773t = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.dcd5c5e2.js"),
-						import("./_app/immutable/entry/app.bf6a23bb.js")
+						import("./_app/immutable/entry/start.dac3ada3.js"),
+						import("./_app/immutable/entry/app.5e89999f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
