deploy: 9a3d328ae1a7368a9f2bac9de3bef6efdf177d78

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.PwCuiqvT.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9VelhbZ6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.oA2MTBbM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.iQwwI1gX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Zw6Na52j.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.6U7jrq8p.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.MG-GjAPk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.XatKojLs.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.PaU4Uc1O.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2._I9birMU.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_11at5yv = {
+					__sveltekit_s7r8n0 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.PwCuiqvT.js"),
-						import("./_app/immutable/entry/app.Zw6Na52j.js")
+						import("./_app/immutable/entry/start.9VelhbZ6.js"),
+						import("./_app/immutable/entry/app.MG-GjAPk.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
