deploy: 3a54e6901a5366a8660fc234fb4993c33fefa00d

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.NJGCSLgl.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.3kN1xo8C.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.oA2MTBbM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.HR0O78r0.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2_-gaZGQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.g9B3JcZQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.I-czbNfW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.XatKojLs.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.PaU4Uc1O.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2._I9birMU.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_l4rawo = {
+					__sveltekit_d1x6e7 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.NJGCSLgl.js"),
-						import("./_app/immutable/entry/app.2_-gaZGQ.js")
+						import("./_app/immutable/entry/start.3kN1xo8C.js"),
+						import("./_app/immutable/entry/app.I-czbNfW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
