deploy: f8dba807d944666153feff2ff287d5c4b2557ae6

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3kN1xo8C.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Was7dsA8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.oA2MTBbM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.g9B3JcZQ.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.I-czbNfW.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.vw0gSizL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.e-O5uhT6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.XatKojLs.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.PaU4Uc1O.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2._I9birMU.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_d1x6e7 = {
+					__sveltekit_4rh5yw = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3kN1xo8C.js"),
-						import("./_app/immutable/entry/app.I-czbNfW.js")
+						import("./_app/immutable/entry/start.Was7dsA8.js"),
+						import("./_app/immutable/entry/app.e-O5uhT6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
