deploy: 0065357070bff192e394d118e8e0fd62dc59805d

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.cf4JvJaG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.sdDVrHFw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.oA2MTBbM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.Iz9F-1cT.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.G1CMuE2I.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.Ij8Kk2H8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.km_sTbA7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.XatKojLs.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.PaU4Uc1O.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2._I9birMU.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1araubi = {
+					__sveltekit_jg4ac5 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.cf4JvJaG.js"),
-						import("./_app/immutable/entry/app.G1CMuE2I.js")
+						import("./_app/immutable/entry/start.sdDVrHFw.js"),
+						import("./_app/immutable/entry/app.km_sTbA7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
