--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Y4sGdhn3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry._H5kX6xy.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.jZHiC7Wq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.E8M38yRe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.cBCQ_Z-M.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.6jvsDASb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.As5nJfDJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.geDiylAy.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.B-TSII0J.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.i2ku0LZq.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_2bzhjp = {
+					__sveltekit_1lzggdb = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Y4sGdhn3.js"),
-						import("./_app/immutable/entry/app.6jvsDASb.js")
+						import("./_app/immutable/entry/start.jZHiC7Wq.js"),
+						import("./_app/immutable/entry/app.As5nJfDJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
