deploy: 20b9ea1c997616335cbf0f50f3ed776d2ec14c9a

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.jZHiC7Wq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.E8M38yRe.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2-yA0iCc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.a9YV-gTX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.cBCQ_Z-M.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.As5nJfDJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.3CrLlNph.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.geDiylAy.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.B-TSII0J.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.i2ku0LZq.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1lzggdb = {
+					__sveltekit_1jjtnzr = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.jZHiC7Wq.js"),
-						import("./_app/immutable/entry/app.As5nJfDJ.js")
+						import("./_app/immutable/entry/start.2-yA0iCc.js"),
+						import("./_app/immutable/entry/app.3CrLlNph.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
