deploy: 790cab7ecaf7f59830215d94e1628b6123e6dbbe

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<title>OpenAI Chat Visualizer</title>
 		
 		<link href="./_app/immutable/assets/2.fdqCkULv.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.aK4Ij-gu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.3YWLi-KQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.dX5H2qfH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.v5Z42qbt.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.cBCQ_Z-M.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.GgjSel74.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Pt4iSrYF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index._W6S0DZH.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.2PYheOYf.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.EqWlUbHq.js">
@@ -20,7 +20,7 @@
 			
 			<script>
 				{
-					__sveltekit_1hudk1q = {
+					__sveltekit_vfd5lk = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.aK4Ij-gu.js"),
-						import("./_app/immutable/entry/app.GgjSel74.js")
+						import("./_app/immutable/entry/start.dX5H2qfH.js"),
+						import("./_app/immutable/entry/app.Pt4iSrYF.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
